overflow and max-width `.excerpt-index` fixes
- "overflow: hidden" in place of "overflow: auto" (gets rid of
scrollbars in all cases)
- "max-width: 66em" broke the grid margins at >80em widths (outdated
CSS rule, I believe)

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ hr {
 .excerpt-index {
   list-style: none;
   margin: .5em auto;
-  overflow: auto;
+  overflow: hidden;
   padding: 0;
   transition: none;
 }
@@ -567,10 +567,6 @@ figcaption {
     display: none;
   }
 
-  .excerpt-index {
-    overflow: none; /* auto fix is no longer needed because of shifted .site-nav */
-  }
-
   .site-nav {
     font-size: 1.25em;
     left: 50%; /* this hack centers the nav */
@@ -661,10 +657,6 @@ figcaption {
   .excerpt-index,
   .site-info {
     font-size: 1.125em;
-  }
-
-  .excerpt-index {
-    max-width: 66em;
   }
 
 }
